OldArchive/07142328caba0008e8afc2c356497eb6-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:2:1: error: 'a' does not name a type
 a aa();
 ^
main.cpp:3:1: error: 'b' does not name a type
 b aa();
 ^
main.cpp:124:1: error: 'c' does not name a type
 c cc();
 ^
main.cpp:125:1: error: 'd' does not name a type
 d dd();
 ^
